# tabularis-mysql-ssl

./: .gitignore  Cargo.toml  README.md  manifest.json  mysqlssl-plugin.config.json.example  package-plugin.ps1
docker/mysql-tls/: README.md  compose.yaml  generate-certs.ps1  openssl.cnf
docker/mysql-tls/mysql/conf.d/: tls.cnf
docker/mysql-tls/mysql/init/: 01-create-test-data.sql
src/: common.rs  config.rs  main.rs  models.rs  pool_manager.rs  rpc.rs
src/mysql/: extract.rs  mod.rs
