[package]
name = "mysqlssl-plugin"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
infer = "0.19"
log = "0.4"
once_cell = "1"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls", "chrono", "rust_decimal", "uuid", "json"] }
uuid = { version = "1", features = ["serde"] }